[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bomb.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 0.05

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereShape" id=3]
radius = 4.0

[node name="Bomb" type="RigidBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="CSGSphere" type="CSGSphere" parent="."]
radius = 0.05
radial_segments = 6
material = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
